# graphrag

./: .gitattributes  .gitignore  .gitlab-ci.yml  .prettierrc.mjs  Dockerfile  README.md  deploy.yaml  docker-compose.yaml  eslint.config.js  import-map.json  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.vue  (+2 more)
backend/: .env  Dockerfile  pyproject.toml
backend/api/: __main__.py  graphrag_processing.py  pg.py  pyproject.toml  settings.py
backend/data/graphs/gazeta/: rep.json
backend/data/output_gazeta_threshold/: create_base_documents.parquet  create_base_entity_graph.parquet  create_base_extracted_entities.parquet  create_base_text_units.parquet  create_final_communities.parquet  create_final_community_reports.parquet  create_final_documents.parquet  create_final_entities.parquet  create_final_nodes.parquet  create_final_relationships.parquet  create_final_text_units.parquet  create_summarized_entities.parquet
backend/data/yandex5_podcast/: create_base_documents.parquet  create_base_entity_graph.parquet  create_base_extracted_entities.parquet  create_base_text_units.parquet  create_final_communities.parquet  create_final_community_reports.parquet  create_final_documents.parquet  create_final_entities.parquet  create_final_nodes.parquet  create_final_relationships.parquet  create_final_text_units.parquet  create_summarized_entities.parquet
backend/graphrag/: pyproject.toml
backend/graphrag/graphrag/api/: index_api.py
backend/graphrag/graphrag/config/: config_file_loader.py  enums.py
backend/graphrag/graphrag/index/: cli.py  load_pipeline_config.py
backend/graphrag/graphrag/index/flows/: create_final_community_reports.py
backend/graphrag/graphrag/index/llm/: load_llm.py
backend/graphrag/graphrag/index/operations/: cluster_graph.py
backend/graphrag/graphrag/llm/: __init__.py
backend/graphrag/graphrag/vector_stores/: base.py  lancedb.py
backend/scripts/: convert_relationships_to_graph.py  ddl.sql
(+172 files in other folders)
