[project]
name = "graphrag-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bayanpy>=0.7.7",
]

[tool.uv.workspace]
members = [
    "graphrag",
    "api",
]


[dependency-groups]
dev = [
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "networkx>=3.4.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
]
