[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "yandex-cloud-ml-sdk>=0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
