[project]
name = "graphrag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "environs>=11.0.0,<12",
    "datashaper>=0.0.49,<0.0.50",
    "azure-search-documents>=11.4.0,<12",
    "lancedb>=0.13.0,<0.14",
    "aiolimiter>=1.1.0,<2",
    "aiofiles>=24.1.0,<25",
    "openai>=1.51.2,<2",
    "nltk==3.9.1",
    "tiktoken>=0.7.0,<0.8",
    "numpy>=1.25.2,<2",
    "graspologic>=3.4.1,<4",
    "networkx>=3,<4",
    "pandas>=2.2.3,<3",
    "matplotlib>=3.9.0,<4",
    "pyarrow>=15.0.0,<16",
    "umap-learn>=0.5.6,<0.6",
    "pyyaml>=6.0.2,<7",
    "pyaml-env>=1.2.1,<2",
    "python-dotenv>=1.0.0,<2",
    "tenacity>=9.0.0,<10",
    "pydantic>=2.9.2,<3",
    "rich>=13.6.0,<14",
    "devtools>=0.12.2,<0.13",
    "typing-extensions>=4.12.2,<5",
    "azure-storage-blob>=12.22.0,<13",
    "azure-identity>=1.17.1,<2",
    "json-repair>=0.30.0,<0.31",
    "future>=1.0.0,<2",
    "bayanpy>=0.7.7",
]

[tool.hatch.build.targets.wheel]
packages = ["graphrag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

